changes in account class

--- a/force-app/main/default/classes/AccountClass.cls
+++ b/force-app/main/default/classes/AccountClass.cls
@@ -3,5 +3,6 @@ public class AccountClass {
     public static List<account> accountclass() {
         List<Account> acc=[select id,name from Account limit 5];
         return acc;
+        // added comment
     }
  }
