one more checkout

--- a/force-app/main/default/classes/AccountClass.cls
+++ b/force-app/main/default/classes/AccountClass.cls
@@ -4,5 +4,6 @@ public class AccountClass {
         List<Account> acc=[select id,name from Account limit 5];
         return acc;
         // added comment
+        // comments added in master
     }
  }
